static/styles/main.css
:root {
    --color-bg: #cbdff7;
    --color-bg-light: #ffffff;
    --color-accent: #3e8ed0;
    --color-tag-hover: #363636;
}

html {
    height: 100%;
}

body {
    min-height: 100%;
    background-color: var(--color-bg);
    background-image: linear-gradient(330deg, var(--color-bg) 0%, var(--color-bg-light) 64%);
}


.hero-body {
    padding: 1rem 2rem;
}

.hero-body .image {
    padding: 0 1.5rem;
}

.footer, .navbar {
    background-color: initial;
}

.tag {
    transition: 1.5s ease-in;
}

a.tag:hover {
    background-color: var(--color-tag-hover);
    color: #fff;
}

.trans-reset {
    transition: 0.2s ease-in !important;
    transition-delay: 0s !important;
}

.trans-delay-05 {
    transition-delay: 0.5s;
}

.trans-delay-075 {
    transition-delay: 0.75s;
}

.trans-delay-1 {
    transition-delay: 1s;
}

.trans-delay-125 {
    transition-delay: 1.25s;
}

.trans-delay-15 {
    transition-delay: 1.5s;
}

.trans-delay-175 {
    transition-delay: 1.75s;
}

.trans-delay-2 {
    transition-delay: 2s;
}

.timeline {
    position: relative;
}

.timeline .event {
    display: none;
}

.timeline .event > .column_year {
    display: flex;
    align-items: center;
}

/* .timeline .year {
    transform: rotate(
        -90deg
    );
    position: absolute;
    left: -55px;
} */

.timeline .year::after {
    content: "";
    width: 10%;
    height: 2px;
    background: var(--color-accent);
    position: absolute;
    bottom: 50%;
    left: 10%;
    z-index: -1;
}

.timeline .line {
    width: 0px;
    height: 150%;
    border-right: 2px var(--color-accent) solid;
    position: absolute;
    top: 50%;
    left: 6.5%;
    z-index: -1;
}

.timeline .line.last {
    height: 40%;
    border-right-style: dotted;
}


@media screen and (min-width: 769px), print {
    .hero-body {
        padding: 2rem 2rem;
    }

    .hero-body .image {
        padding: 0;
    }

    .timeline .line {
        left: 6.75%;
    }

    /* .timeline .year {
        transform: none;
        position: relative;
        left: 0px;
    } */

    .timeline .year::after {
        width: 20%;
    }
}

@media screen and (max-width: 1023px) {
    .timeline .year {
        writing-mode: vertical-rl;
        height: auto;
        padding-top: .75em;
        padding-bottom: .75em;
        position: absolute;
        left: 5%;
    }

    .timeline .year::after {
        display: none;
    }
}

@media screen and (max-width: 768px) {
    .timeline .year {
        left: 4%;
    }
}

